# backend/server/api/controllers/products/router.ts
@@ -4,4 +4,5 @@ export default express
   .Router()
   .post('/', controller.create)
   .get('/', controller.all)
+  .get('/cart', controller.cart)
   .get('/:id', controller.byId);
